--- a/client/src/styles/portfolio-images.css
+++ b/client/src/styles/portfolio-images.css
@@ -40,3 +40,34 @@
   .example-work-container:hover .title-text{
      display: block;
   }
+
+
+    /* Style the buttons */
+    .btn {
+      border: none;
+      outline: none;
+      padding: 12px 16px;
+      background-color: white;
+      cursor: pointer;
+    }
+    
+    .btn:hover {
+      background-color: #ddd;
+    }
+    
+    .btn.active {
+      background-color: #666;
+      color: white;
+    }
+    #myBtnContainer {
+      display: flex;
+      justify-content:center; 
+    }
+    button {
+      margin: 0 5px;
+    }
+    .btn {
+      font-size: 50%;
+      text-transform: uppercase;
+    }
+  
